# enterprise-hr-assistant

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  README_SPACE.md  entrypoint.sh
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 96bede830c4d_initial_schema.py
backend/app/: main.py
backend/app/agents/: base.py  citation.py  context_ranking.py  llm.py  memory.py  orchestrator.py  prompt_construction.py  query_understanding.py  response_validator.py  retriever.py  user_query.py
backend/app/api/: deps.py  spa.py
backend/app/core/: config.py  constants.py  exceptions.py  logging.py
backend/app/database/: models.py  seed.py  seed_demo.py  session.py
backend/app/embeddings/: embedder.py  registry.py
backend/app/middleware/: auth.py  rate_limit.py  request_id.py
backend/app/prompts/: answer_v1.txt  rewrite_v1.txt  summarize_v1.txt
backend/app/rag/: chunker.py  citations.py  ingestion_pipeline.py  metadata.py  pdf_processor.py  prompt_builder.py  ranking.py  retriever.py
backend/app/services/: llm_service.py  storage_service.py  vector_store.py
backend/app/utils/: tokens.py
backend/scripts/: calibrate_threshold.py  generate_golden_fixture.py  rebuild_index.py
backend/tests/: _fakes.py
backend/tests/api/: conftest.py  test_chat.py  test_demo_seed.py  test_documents.py  test_health.py  test_history.py  test_sessions.py  test_spa.py  test_upload.py
backend/tests/evaluation/: golden_qa.py  test_golden_set.py
backend/tests/integration/: test_alembic_migrations.py  test_ingestion_pipeline.py  test_rebuild_index.py
backend/tests/unit/: conftest.py  test_agents_base.py  (+31 more)
(+63 files in other folders)
