[project]
name = "hr-assistant-backend"
version = "0.1.0"
description = "Enterprise HR Policy AI Assistant — backend (Agentic RAG)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "structlog==24.4.0",
    "python-multipart==0.0.20",
    "pymupdf==1.25.3",
    "sentence-transformers==5.6.0",
    "chromadb==1.5.9",
    "google-genai==2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "black==24.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's DI system is *designed* around Query()/Depends()/File() as
# parameter defaults - this is the idiomatic pattern, not the mutable-default
# footgun the rule targets.
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
markers = [
    "model: exercises the real BGE embedding model or its tokenizer (downloads/caches ~130MB from Hugging Face on a cold machine; fast on subsequent runs)",
    "live_llm: makes a real call to the Gemini API (requires a real GEMINI_API_KEY); skipped by default",
]
